--- a/config/app.config
+++ b/config/app.config
@@ -5,10 +5,20 @@
   "odata": {
     "exposeEntities": true,
     "exposeMetadata": false,
-    "metadataSecurity": "Administrators"
+    "metadataSecurity": "Administrators",
+    "entitiesSecurity": null
   },
   "security": {
     "token": "OGNiMzdhODMtZTlmNi00ZGQ2LTkwYjQtMjgxMWNlZTA0Y2Fm",
     "tokenExpiration": 3600
-  }
+  },
+  "auth": {
+    "type": "internal",
+    "defaultDomain": null,
+    "hostname": null,
+    "autoSignUp": false
+  },
+  "fixedTimeZone": true,
+  "timeZone": "UTC",
+  "timeZoneOffset": 0
 }
